Add BookAuthor Schema + minor fixes
